filter generator directive, service, tpl

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -91,6 +91,8 @@
 <script type="text/javascript" src="js/portal/shared/filter/filter.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
 
 <script type="text/javascript" src="js/portal/resources/resources.module.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.config.js"></script>
