--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -72,6 +72,7 @@
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 <script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
+<script type="text/javascript" src="bower_components/clipboard/dist/clipboard.min.js"></script>
 
 <script src="config.js"></script>
 
@@ -231,6 +232,8 @@
 <script type="text/javascript" src="js/portal/keys/controller/keysList.controller.js"></script>
 <script type="text/javascript" src="js/portal/keys/controller/keysCreate.controller.js"></script>
 <script type="text/javascript" src="js/portal/keys/controller/keysEdit.controller.js"></script>
+<script type="text/javascript" src="js/portal/keys/key-copy/key-copy.directive.js"></script>
+<script type="text/javascript" src="js/portal/keys/edit-inline/edit-inline.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
