--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -202,6 +202,7 @@
 <script type="text/javascript" src="js/portal/reports/controller/fbtReports.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/trafficHeatmaps.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/lmRTTHeatmaps.controller.js"></script>
+<script type="text/javascript" src="js/portal/reports/controller/general.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/reports/mobile.module.js"></script>
 <script type="text/javascript" src="js/portal/reports/mobile.routes.js"></script>
