--- a/code/dev/parts/reports/general.html
+++ b/code/dev/parts/reports/general.html
@@ -7,7 +7,7 @@
 
   <div class="row">
     <div class="col-md-12">
-    	<filter-generator></filter-generator>
+    	<filter-generator ng-model="vm.model.filtersList"></filter-generator>
     </div>
   </div>
 
