Fixing JS code style

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -58,7 +58,7 @@
                   <div class="form-group">
                     <button class="btn btn-info" ng-click="onUpdate()">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-                      Update Reports
+                      Update Report
                     </button>
                   </div>
                 </form>
