--- a/code/dev/parts/reports/general.html
+++ b/code/dev/parts/reports/general.html
@@ -7,7 +7,50 @@
 
   <div class="row">
     <div class="col-md-12">
-    	<filter-generator ng-model="vm.model.filtersList"></filter-generator>
+    	
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="pull-left">
+                <form class="form-inline">
+                  <div class="form-group">
+                    <div domain-select ng-model="vm.model.domain" on-select="vm.actions.onDomainChange()" select-one="true"></div>
+                  </div>
+                  <div class="form-group">
+                    <filter-generator ng-model="vm.model.filtersList"></filter-generator>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body">
+
+          <div class="row">
+            <div class="col-lg-6">
+              <div requests-chart
+                   fl-os="os.labels"
+                   fl-device="device.labels"
+                   fl-country="countries"
+                   ng-domain="vm.model.domain"></div>
+            </div>
+            <div class="col-lg-6">
+              <div proxy-traffic-chart
+                   status-codes="statusCode.labels"
+                   fl-os="os.labels"
+                   fl-device="device.labels"
+                   fl-country="countries"
+                   ng-domain="vm.model.domain"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
