--- a/code/dev/parts/shared/filter-generator/filter-generator.html
+++ b/code/dev/parts/shared/filter-generator/filter-generator.html
@@ -1,15 +1,53 @@
 <div class="filter-generator">
-    <input date-range-picker="" ng-model="datePicker.date" options="::datePicker.options" class="form-control pull-left date-picker select2" type="text" />
-    <select ng-repeat-start="filter in filters" ng-model="filter.selected" ng-options="::value.count as ::value.key for value in ::filter.vals") class="form-control">
-    	<option value="" disabled selected>Select {{::filter.name}}</option>
+    <input 
+        date-range-picker=""
+        ng-model="datePicker.date"
+        ng-change="actions.filterChange()"
+        options="::datePicker.options"
+        class="form-control pull-left date-picker select2"
+        type="text"
+        />
+    <select 
+        ng-repeat-start="filter in filters"
+        ng-model="filter.selected"
+        ng-options="::value.count as ::value.key for value in ::filter.vals")
+        ng-change="actions.filterChange()"
+        class="form-control"
+        >
+    	<option
+            value=""
+            disabled
+            selected
+            >Select {{::filter.name}}
+        </option>
     </select>
-    <i ng-repeat-end ng-click="actions.removeShownFilter(filter, $index)" class="fa fa-times remove-active-filter"></i>
-    <div class="button-wrapper" ng-show="addFilterMenu.filters().length > 0">
-        <button ng-click="actions.showMenu($event)" class="btn btn-success">
+    <i
+        ng-repeat-end
+        ng-click="actions.removeShownFilter(filter, $index)"
+        class="fa fa-times remove-active-filter"
+        >
+    </i>
+    <div
+        ng-show="addFilterMenu.filters().length > 0"
+        class="button-wrapper"
+        >
+        <button
+            ng-click="actions.showMenu($event)"
+            class="btn btn-success"
+            >
             <i class="glyphicon glyphicon-plus"></i>
         </button>
-        <div ng-show="addFilterMenu.show" class="fg-add-filter-menu" ng-mouseleave="actions.hideMenu()">
-        	<div ng-click="actions.addFilter(filter, $index)" class="dd-element" ng-repeat="filter in addFilterMenu.filters()" ng-bind="::filter.name">
+        <div
+            ng-show="addFilterMenu.show"
+            ng-mouseleave="actions.hideMenu()"
+            class="fg-add-filter-menu"
+            >
+        	<div
+                ng-click="actions.addFilter(filter, $index)"
+                ng-repeat="filter in addFilterMenu.filters()"
+                ng-bind="::filter.name"
+                class="dd-element"
+                >
         </div>
     </div>
 </div>
