--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -46,7 +46,7 @@
                 <a ui-sref-active="active" ui-sref="index.accountSettings.activitylog" class="side-menu-sub-item">Activity Log</a>
                 <a ui-sref-active="active" ui-sref="index.accountSettings.usage" class="side-menu-sub-item" ng-if="!userService.isUser()">Usage Report</a>
             </li>
-            <li ui-sref-active='active-side-menu-item'>
+            <li ui-sref-active="active-side-menu-item">
                 <a ui-sref="index.help" class="side-menu-item">Support</a>
                 <a href="https://api.revapm.net/" class="side-menu-sub-item" target="_blank">API Documentation</a>
                 <a href="https://revapm.zendesk.com/hc/en-us" class="side-menu-sub-item" target="_blank">Knowledge Base</a>
