--- a/code/parts/auth/login.html
+++ b/code/parts/auth/login.html
@@ -4,7 +4,7 @@
     <div class="login_box">
       <div id="logo" class="logo block-center">
         <a href="https://www.revapm.com/" target="_blank">
-          <img src="images/logo_color.png">
+          <img src="images/logo_color.png" alt="RevAPM Logo">
         </a>
       </div>
       <form novalidate class="login_form block-center" ng-submit="login(email, pass)">
