Unifying the empty list message

--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -78,7 +78,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently there are no apps registered in the system
+            Currently you don't have any apps registered in the system. You can click on "Add New App" button above to add an app.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
