--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -43,7 +43,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently there are no API keys registered in the system
+            Currently you don't have any API keys registered in the system. You can click on "Add New API Key" button above to add an API key.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
