--- a/code/parts/domains/list.html
+++ b/code/parts/domains/list.html
@@ -79,7 +79,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently there are no domains registered in the system
+            Currently you don't have any web domains registered in the system. You can click on "Add New Domain" button above to add a domain.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
