--- a/code/parts/users/list.html
+++ b/code/parts/users/list.html
@@ -43,7 +43,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently there are not users registered in the system
+            Currently you don't have any users registered in the system. You can click on "Add New User" button above to add a user.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
