--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -37,6 +37,19 @@
                      placeholder="Company Name">
             </div>
           </div>
+          <div class="form-group">
+            <label for="comment" class="col-sm-2 control-label">Comment</label>
+            <div class="col-sm-10">
+              <input type="text"
+                     autofocus
+                     class="form-control"
+                     ng-disabled="_loading"
+                     maxlength="300"
+                     ng-model="model.comment"
+                     id="comment"
+                     placeholder="Comment (max 300 symbol)">
+            </div>
+          </div>
 
           <hr>
           <div class="form-group">
@@ -45,7 +58,7 @@
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
-              <button class="btn btn-success" ng-disabled="_loading">
+              <button class="btn btn-success" ng-disabled="_loading || !model.companyName">
                 <i class="glyphicon glyphicon-ok"></i>&nbsp;
                 Create Company
               </button>
