--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -175,6 +175,7 @@
 <script type="text/javascript" src="js/portal/reports/service/d3ChartHelper.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/chartColorService.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/pieChartHelper.factory.js"></script>
+<script type="text/javascript" src="js/portal/reports/service/reports-filter.service.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/timePeriods.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/filterTopObjects.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/mobileTrafficFilters.directive.js"></script>
