--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -72,7 +72,7 @@
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 <script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-
+<script type="text/javascript" src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="config.js"></script>
 
 <!-- build:js scripts/compiled.js -->
@@ -231,6 +231,10 @@
 <script type="text/javascript" src="js/portal/keys/controller/keysList.controller.js"></script>
 <script type="text/javascript" src="js/portal/keys/controller/keysCreate.controller.js"></script>
 <script type="text/javascript" src="js/portal/keys/controller/keysEdit.controller.js"></script>
+
+<script type="text/javascript" src="js/portal/dashboard/dashboard.module.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/dashboard.routes.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/controller/dashdoard.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
