--- a/code/index.html
+++ b/code/index.html
@@ -72,7 +72,7 @@
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 <script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-
+<script type="text/javascript" src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="config.js"></script>
 
 <script src="scripts/compiled.js"></script>
