general view, filter updates, new design

--- a/code/dev/parts/shared/filter-generator/filter-generator.html
+++ b/code/dev/parts/shared/filter-generator/filter-generator.html
@@ -55,6 +55,13 @@
                 ng-bind="::filter.name"
                 class="dd-element"
                 >
+            </div>
         </div>
     </div>
+    <button
+        class="btn btn-info"
+        ng-click="actions.refreshFilter()"
+        >
+        <i class="glyphicon glyphicon-refresh"></i>
+    </button>
 </div>
