--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Users List
+        Users List - Demo for Miro
       </h2>
     </div>
   </div>
