--- a/code/dev/parts/reports/filters/time-period.html
+++ b/code/dev/parts/reports/filters/time-period.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row filter-time-period">
   <div class="col-md-12">
     <form class="form-inline">
       <div class="form-group">
